# spot_master

bno085_imu_py/: package.xml  ros2_env_raspi.sh  setup.cfg  setup.py
bno085_imu_py/bno085_imu_py/: node.py
bno085_imu_py/config/: imu_params.yaml
bno085_imu_py/launch/: imu.launch.py  imu_rviz_config.rviz  rviz2.launch.py
motion_cmd/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
motion_cmd/include/motion_cmd/: teleop_keys.hpp
motion_cmd/launch/: motion_cmd.launch.py  teleop_kb.launch.py
motion_cmd/motion_cmd/: motion_cmd_node.py
motion_cmd/motion_cmd/gaits/: dual_board_gait.py
motion_cmd/motion_cmd/params/: motion_cmd.yaml
motion_cmd/motion_cmd/utils/: filters.py
motion_cmd/src/: motion_cmd_node.cpp  teleop_kb.cpp  teleop_keys.cpp
motion_control/: CMakeLists.txt  package.xml
motion_control/include/motion_control/: motion_control.h
motion_control/src/: motion_control.cc
scripts/: install_libraries.sh
smov_befehle/: script_dualboard_launch.sh  script_gait_walking.sh
smov_bringup/launch/: dual_board.launch.py  single_board.launch.py
smov_config/config/: dual_board.yaml.example  my_config.yaml  single_board.yaml.example
smov_lib/include/smov/: mathematics.h
smov_lib/src/: mathematics.cc
smov_states/: CMakeLists.txt  package.xml
smov_states/include/: robot.h
smov_states/src/: robot.cc
spot_micro_motion_cmd/: CMakeLists.txt  package.xml
spot_micro_motion_cmd/include/spot_micro_motion_cmd/: spot_micro_motion_cmd.h  utils.h
spot_micro_motion_cmd/launch/: spot_micro_motion_cmd.launch.py
spot_micro_motion_cmd/src/: spot_micro_motion_cmd.cpp
walking_gait/include/: walking_gait.h
walking_gait/src/: walking_gait.cc
