<?xml version="1.0"?>
<package format="3">
  <name>bno085_imu_py</name>
  <version>0.1.0</version>
  <description>ROS 2 IMU publisher for BNO085 using Adafruit I2C (no IRQ)</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
