<?xml version="1.0"?>
<package format="3">
  <name>motion_cmd</name>
  <version>1.0.0</version>
  <description>ROS 2 Jazzy motion commander using SMOV (TrigonometryState); keyboard W/S + arrows; independent of walking_gait.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>smov_msgs</depend>

  <!-- Header-only includes from smov_lib -->
  <exec_depend>smov_lib</exec_depend>
  <exec_depend>smov_states</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
