<?xml version="1.0"?>
<package format="3">
  <name>motion_cmd</name>
  <version>1.0.0</version>
  <description>Keyboard + /cmd_vel driven gait using SMOV TrigonometryState; W=Wake→Walk, S=Idle, arrows for steer/curve.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>smov_lib</depend>
  <depend>smov_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
