[metadata]
name = motion_cmd
version = 0.1.0
summary = Spot-Micro-like motion commander (ROS 2, Python)
author = You
license = MIT
description_file = README.md
home_page = https://example.com
requires_dist = 

[options]
packages = find:
install_requires = 
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    motion_cmd_node = motion_cmd.motion_cmd_node:main
