<?xml version="1.0"?>
<package format="3">
  <name>motion_control</name>
  <version>0.1.0</version>
  <description>Motion control for SMOV with keyboard input.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>smov_lib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
