<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_micro_motion_cmd</name>
  <version>0.1.0</version>
  <description>Motion control node for Spot Micro robot with keyboard input, using smov_lib and smov_config.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>i2cpwm_board_msgs</depend>
  <depend>smov_msgs</depend>
  <depend>smov_lib</depend>  <!-- Ersetzt spot_micro_kinematics -->
  <depend>smov_config</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
